# Texwriter

./: .gitignore  TODO  com.github.molnarandris.texwriter.json  com.github.molnarandris.texwriter.json~  meson.build
data/: com.github.molnarandris.texwriter.appdata.xml.in  com.github.molnarandris.texwriter.desktop.in  com.github.molnarandris.texwriter.gschema.xml  meson.build
data/icons/: meson.build
data/icons/hicolor/: meson.build
po/: POTFILES
src/: autocomplete.py  documentmanager.py  editor_page.blp  editor_page.py  latexbuffer.py  logprocessor.py  logview.py  main.py  meson.build  pdfviewer.blp  pdfviewer.py  pdfviewer.ui  sourceview.blp  sourceview.py  tabpage.blp  tabpage.py  texfile.py  texwriter.gresource.xml  texwriter.in  utilities.py  viewer_page.blp  viewer_page.py  window.blp  window.py  window.ui
